update: removing query-detail.ts
